Fix to footer placement on small screens

--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
       </div><!-- .col-9 -->
     </div><!-- .row -->
   </div><!-- .container-fluid -->
+  <div id="smallAppend"></div>
   <div id="footer-bottom" class="clr no-footer-nav">
     <div id="footer-bottom-inner" class="container clr">
         <div id="copyright" class="clr">Copyright 2020 Bela Software | ABN: 88 032 062 153</div><!-- #copyright -->
