Tidy code and restore tooltip function

--- a/index.html
+++ b/index.html
@@ -77,12 +77,13 @@
         <div class="sidebar-section" id="uploadImages">
           <h5 class="sidebar-title">
             Upload your images:
-            <button type="button" class="btn info-button" >
-            <!-- title="Upload images" data-placement="top" data-toggle="tooltip" data-html="true"
-            data-original-title="<p><em>Click a 'plus' to upload your images.</em></p>
-            <p><em>Uploaded images will display as a thumbnail in the grid below.</em></p>
-            <p><em>Double click an image to add it to the board.</em></p>"> -->
-            <img src="svg/info.svg"></button>
+            <button type="button" class="btn info-button" 
+              data-placement="top" data-toggle="tooltip" data-html="true"
+              title="<p>Click a 'plus' to upload your images.</p>
+              <p><em>Uploaded images will display as a thumbnail in the grid below.</em></p>
+              <p><em>Double click an image to add it to the board.</em></p>">
+              <img src="svg/info.svg">
+            </button>
           </h5>
           <ul class="image-slots" id="addImages">
             <li class="height-equal-width" id="squareImage">
@@ -273,7 +274,6 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
                 </div>
               </div>
             </div>
